--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
-version: 3.9
+version: '3.9'
 
 services:
 
   tipdog_sounds:
-  
+
     image: tipdogsounds
     build:
       dockerfile: ./Dockerfile
